--- a/.env
+++ b/.env
@@ -1,2 +1,13 @@
+# Environment variables for different use cases. Please comment/uncomment as needed.
+
+# Local Toolkit Run the services by module / Prod use
 NEXT_PUBLIC_API_BASE_URL_TIMEKEEPING=http://localhost:8083
 NEXT_PUBLIC_API_BASE_URL_ADMINISTRATIVE=http://localhost:8082
+
+# Local Toolkit HRISApp module use
+# NEXT_PUBLIC_API_BASE_URL_TIMEKEEPING=http://localhost:9090
+# NEXT_PUBLIC_API_BASE_URL_ADMINISTRATIVE=http://localhost:9090
+
+# Render.com Web Service HRISApp module use
+#NEXT_PUBLIC_API_BASE_URL_TIMEKEEPING=https://hris-znce.onrender.com
+#NEXT_PUBLIC_API_BASE_URL_ADMINISTRATIVE=https://hris-znce.onrender.com
