--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "node scripts/start-app.js",
     "build": "next build",
-    "start": "next start",
+    "start": "node scripts/start-app.js",
     "lint": "next lint",
     "clean": "rimraf .next"
   },
@@ -21,6 +22,7 @@
     "bootstrap": "^5.3.3",
     "cookie": "^1.0.2",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "formidable": "^3.5.2",
     "jsonwebtoken": "^9.0.2",
     "next": "^15.1.6",
