--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^4.1.0",
     "formidable": "^3.5.2",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.548.0",
     "next": "^15.1.6",
     "react": "^18.2.0",
     "react-country-state-city": "^1.1.10",
