--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
         "name": "Next.js: debug client-side",
         "type": "chrome",
         "request": "launch",
-        "url": "http://localhost:3000",
+        "url": "http://localhost:3081",
         "webRoot": "${workspaceFolder}",
         "sourceMaps": true
       },
@@ -20,8 +20,12 @@
         "type": "node",
         "request": "launch",
         "program": "${workspaceFolder}/node_modules/next/dist/bin/next",
+        "args": ["dev"],
         "runtimeArgs": ["--inspect"],
+        "cwd": "${workspaceFolder}",
         "skipFiles": ["<node_internals>/**"],
+        "envFile": "${workspaceFolder}/.env",
+        "console": "integratedTerminal",
         "serverReadyAction": {
           "action": "debugWithChrome",
           "killOnServerStop": true,
