--- a/package.json
+++ b/package.json
@@ -11,33 +11,22 @@
     "clean": "rimraf .next"
   },
   "dependencies": {
-    "@fullcalendar/daygrid": "^6.1.18",
-    "@fullcalendar/interaction": "^6.1.18",
-    "@fullcalendar/react": "^6.1.18",
     "@prisma/client": "^5.22.0",
-    "@svgr/webpack": "^8.1.0",
-    "@types/fullcalendar": "^3.8.0",
-    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
-    "bootstrap": "^5.3.3",
     "cookie": "^1.0.2",
-    "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "formidable": "^3.5.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.554.0",
-    "next": "^15.1.6",
+    "next": "15.1.6",
     "react": "^18.2.0",
     "react-country-state-city": "^1.1.10",
-    "react-datepicker": "^7.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
-    "react-sweetalert2": "^0.6.0",
-    "react-toastify": "^10.0.6",
-    "sass": "^1.82.0",
     "sweetalert2": "^11.14.5"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/formidable": "^3.4.5",
     "@types/node": "^20.19.17",
@@ -49,6 +38,7 @@
     "prisma": "^5.22.0",
     "rimraf": "^6.0.1",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "sass": "^1.82.0"
   }
 }
